--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="es.elb4t.llacereu3.Home"
+            android:name="Home"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="es.elb4t.llacereu3.primos.Primos" />
+        <activity android:name=".primos.Primos" android:parentActivityName=".Home" android:label="Primos"/>
+        <activity android:name=".primos.PrimosInterface" android:parentActivityName=".Home" android:label="Primos Interface"/>
     </application>
 
 </manifest>
