--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
         <activity android:name=".primos.Primos" android:parentActivityName=".Home" android:label="Primos"/>
         <activity android:name=".primos.PrimosInterface" android:parentActivityName=".Home" android:label="Primos Interface"/>
         <activity android:name=".primos.PrimosFragmentOculto" android:parentActivityName=".Home" android:label="Primos Fragmento Oculto"/>
+        <activity android:name=".serviciocronometro.ServicioCronometro" android:parentActivityName=".Home" android:label="Servicio Cronometro"/>
+        <service
+            android:name=".serviciocronometro.BoundService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
